add imagens e app do javaScript

--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
 </head>
 <body>
     <header class="cabecalho">
+        <img class="imagem__alura" src="img/Vector.png">
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <input placeholder="Digite um texto" class="apresentacao__conteudo__texto" type="text">  
             <p class="apresentacao__aviso">Apenas letras minusculas e sem acento.</p>
             <div class="apresentacao__botoes">
-            <button class="primeiro__botao">Criptografar</button>
-            <button class="segundo__botao">Descriptografar</button>
+                <button onclick="verificarCriptografia()" class="primeiro__botao">Criptografar</button>
+                <button onclick="verificarDescriptografia()" class="segundo__botao">Descriptografar</button>
             </div>
         </section>
+        <div style='position:relative; top:0px; left:0px;'>
+        <img class ="apresentacao__imagens1" src="/img/rectangle1.png">
+        <div style='position:absolute; top:110px; left:5px; text-align:center;'>
+        <img class="apresentacao__imagens2" src="/img/menino.png">
+        <div style='position:relative; top:110px; left:5px;'>
+        <img class="apresentacao__imagens3" src="/img/nenhumamensagem.png">
+        <div style='position:relative; top:25px; left:5px;'>
+        <img class="apresentacao__imagens4" src="/img/digiteumtexto.png">
+
+        
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Edla Goveia</p>
