add funcionalidade aos botoes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <span>Apenas letras minúsculas e sem acento</span>
             </div>
             <div class="apresentacao__principal">
-                <button onclick="verificarCriptografia()" class="primeiro__botao">Criptografar</button>
-                <button onclick="verificarDescriptografia()" class="segundo__botao">Descriptografar</button>
+                <button onclick="verificarCriptografia()" class="apresentacao__botao__destaque">Criptografar</button>
+                <button onclick="verificarDescriptografia()" class="apresentacao__botoes__base">Descriptografar</button>
             </div>
         </section>
        <section id="apresentacao__texto" class="apresentacao__resultado">
