add modificacoes das classes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </section>
        <section id="apresentacao__texto" class="apresentacao__resultado">
         <img src="/img/hero.svg" alt="Pessoa analisando um diamante com uma lupa!">
-            <p class="aviso1">Nenhuma mensagem encontrada</p>
-            <p class="aviso2">Digite um texto que você deseja criptografar ou descriptografar.</p>
+            <p class="aviso">Nenhuma mensagem encontrada</p>
+            <p class="orientacao-entrada">Digite um texto que você deseja criptografar ou descriptografar.</p>
        </section>
     </main>
     <footer>Desenvolvido por <a href="https://github.com/rekoteh">Edla Goveia</a></footer>
