mudança no textoresultado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <header><img src="/img/logo.svg" alt="Logo da Alura"></header>
         <section class="apresentacao__conteudo">
-            <textarea placeholder="Digite um texto" type="text"></textarea>
+            <textarea id="messageBox" placeholder="Digite um texto" type="text"></textarea>
             <div class="apresentacao__informativa">
                 <img 
                     src="img/icon.svg"
