Concerta erro no endereço das imagens

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <main>
-        <header><img src="/img/logo.svg" alt="Logo da Alura"></header>
+        <header><img src="./img/logo.svg" alt="Logo da Alura"></header>
         <section class="apresentacao__conteudo">
             <textarea id="messageBox" placeholder="Digite um texto" type="text" rows="5"></textarea>   
             <div class="apresentacao__informativa">
                 <img 
-                    src="img/icon.svg"
+                    src="./img/icon.svg"
                     width="16"
                     height="16"
                 >
@@ -27,7 +27,7 @@
             </div>
         </section>
        <section id="apresentacao__texto" class="apresentacao__resultado">
-        <img src="/img/hero.svg" alt="Pessoa analisando um diamante com uma lupa!">
+        <img src="./img/hero.svg" alt="Pessoa analisando um diamante com uma lupa!">
             <p class="aviso">Nenhuma mensagem encontrada</p>
             <p class="orientacao-entrada">Digite um texto que você deseja criptografar ou descriptografar.</p>
        </section>
